[package]
name = "circuit-graphs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.2"
faer = "0.16.0"
faer-entity = "0.16.0"
faer-core = "0.16.0"
polars = {version = "0.37.0", features = ["parquet"]}

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}
polars = {version = "0.37.0", features = ["parquet"]}

[[bench]]
name = "benchmark"
harness = false